--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,20 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthinticated" ><a routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active" ><a routerLink="shoppingList">Shopping List</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthinticated" ><a routerLink="/auth">Authentication</a></li>
             </ul>
             
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                <li *ngIf="isAuthinticated" >
+                    <a style="cursor: pointer;" (click)="onLogout()" >Logout </a>
+                </li>
+                <li class="dropdown" appDropDown *ngIf="isAuthinticated" >
+                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                    <ul class="dropdown-menu" >
+                        <li><a style="cursor: pointer;" (click)="onSaveRecipes()" >Save Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()" >Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
