--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,36 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onAddedIngredientForm(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input 
+                    type="text" 
+                    id="name" 
+                    class="form-control"
+                    name="ingName"
+                    ngModel
+                    required
+                    >
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input 
+                    type="number" 
+                    id="amount" 
+                    class="form-control"
+                    name="amount"
+                    ngModel
+                    required
+                    pattern="^[1-9]+[0-9]*$"
+                    >
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Add</button>
-                    <button class="btn btn-danger mr-3" type="button">Delete</button>
-                    <button class="btn btn-primary mr-3" type="button">Clear</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editMode ? 'Update' : 'Add'}}</button>
+                    <button class="btn btn-danger mr-3" type="button" *ngIf="editMode" (click)="onDelete()" >Delete</button>
+                    <button class="btn btn-primary mr-3" type="button" (click)="onClear()" >Clear</button>
                 </div>
             </div>
         </form>
